--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interactive World Map</title>
   <style>
     html, body {
@@ -14,8 +14,6 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow: hidden;
       user-select: none;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
 
     #viewport {
@@ -45,29 +43,23 @@
       background: url('worldmap.png') no-repeat center center;
       background-size: contain;
       position: relative;
-      user-select: none;
     }
 
     .location-container {
       position: absolute;
       text-align: center;
       z-index: 10;
-      pointer-events: auto;
-      user-select: none;
     }
 
     .location-button {
-      position: relative;
       width: 14px;
       height: 14px;
       background: lightgreen;
       border-radius: 50%;
-      cursor: pointer;
-      outline: none;
       border: 2px solid #66bb6a;
       box-shadow: 0 0 8px rgba(102, 187, 106, 0.6);
-      transition: background 0.3s, transform 0.3s;
-      z-index: 1;
+      cursor: pointer;
+      position: relative;
     }
 
     .location-button::before {
@@ -82,7 +74,6 @@
       border: 2px solid #66bb6a;
       opacity: 0.6;
       animation: ripple 2.5s linear infinite;
-      z-index: -1;
     }
 
     @keyframes ripple {
@@ -96,60 +87,31 @@
       }
     }
 
-    .location-button:hover {
-      background: #80e27e;
-      transform: scale(1.1);
-    }
-
-    .location-button:focus-visible {
-      box-shadow: 0 0 12px 3px #80e27e;
-      border-color: #80e27e;
-    }
-
     .label {
       display: none;
       position: absolute;
       top: 30px;
       left: 50%;
       transform: translateX(-50%);
-      white-space: nowrap;
+      background: rgba(0,0,0,0.7);
       color: white;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 4px 8px;
       font-size: 12px;
+      padding: 4px 8px;
       border-radius: 4px;
-      pointer-events: none;
-      user-select: none;
-      font-weight: 600;
-      box-shadow: 0 0 8px rgba(0,0,0,0.7);
-      z-index: 10;
+      white-space: nowrap;
+      font-weight: bold;
     }
 
     .location-container:hover .label,
     .location-button:focus-visible + .label {
       display: block;
     }
-
-    @media (max-width: 768px) {
-      .location-button {
-        width: 20px;
-        height: 20px;
-      }
-      .location-button::before {
-        width: 20px;
-        height: 20px;
-      }
-      .label {
-        font-size: 10px;
-      }
-    }
   </style>
 </head>
 <body>
-  <div id="viewport" role="region" aria-label="Interactive World Map">
+  <div id="viewport">
     <div id="map-container">
       <div class="foreground">
-        <!-- Locations -->
         <div class="location-container" style="top: 450px; left: 350px;"><div class="location-button" aria-label="USA" tabindex="0"></div><div class="label">USA</div></div>
         <div class="location-container" style="top: 490px; left: 1270px;"><div class="location-button" aria-label="India" tabindex="0"></div><div class="label">India</div></div>
         <div class="location-container" style="top: 400px; left: 1580px;"><div class="location-button" aria-label="Japan" tabindex="0"></div><div class="label">Japan</div></div>
@@ -173,129 +135,101 @@
     const mapWidth = 1920;
     const mapHeight = 1080;
 
-    let scale = window.innerWidth < 768 ? 1 : 1.5;
+    // Initial scale and focus on India
+    let scale = 0.6;
     let targetScale = scale;
-    let offsetX = 0, offsetY = 0;
-    let targetOffsetX = 0, targetOffsetY = 0;
+    const indiaX = 1270;
+    const indiaY = 490;
 
-    let cursorX = window.innerWidth * 0.5;
-    let cursorY = window.innerHeight * 0.5;
+    let offsetX = 0;
+    let offsetY = 0;
+    let targetOffsetX = window.innerWidth / 2 - indiaX * scale;
+    let targetOffsetY = window.innerHeight / 2 - indiaY * scale;
 
     function clamp(val, min, max) {
       return Math.min(Math.max(val, min), max);
     }
 
-    function animateTransform() {
-      scale += (targetScale - scale) * 0.08;
-      offsetX += (targetOffsetX - offsetX) * 0.08;
-      offsetY += (targetOffsetY - offsetY) * 0.08;
-
-      const scaledWidth = mapWidth * scale;
-      const scaledHeight = mapHeight * scale;
-      const minOffsetX = window.innerWidth - scaledWidth;
-      const minOffsetY = window.innerHeight - scaledHeight;
-
-      offsetX = clamp(offsetX, minOffsetX, 0);
-      offsetY = clamp(offsetY, minOffsetY, 0);
+    function animate() {
+      // Smooth interpolation (slower for smoother)
+      scale += (targetScale - scale) * 0.05;
+      offsetX += (targetOffsetX - offsetX) * 0.05;
+      offsetY += (targetOffsetY - offsetY) * 0.05;
 
       mapContainer.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${scale})`;
-      requestAnimationFrame(animateTransform);
+      requestAnimationFrame(animate);
     }
 
-    function updateTargetOffsetsFromCursor() {
-      const scaledWidth = mapWidth * targetScale;
-      const scaledHeight = mapHeight * targetScale;
-      const maxOffsetX = scaledWidth - window.innerWidth;
-      const maxOffsetY = scaledHeight - window.innerHeight;
-      const ratioX = cursorX / window.innerWidth;
-      const ratioY = cursorY / window.innerHeight;
-      targetOffsetX = clamp(-maxOffsetX * ratioX, -maxOffsetX, 0);
-      targetOffsetY = clamp(-maxOffsetY * ratioY, -maxOffsetY, 0);
+    function zoomAtPoint(x, y, zoomDelta) {
+      const prevScale = targetScale;
+      targetScale = clamp(targetScale + zoomDelta, 0.2, 3);
+
+      const zoomFactor = targetScale / prevScale;
+      const rect = viewport.getBoundingClientRect();
+      const offsetXRel = x - rect.left - offsetX;
+      const offsetYRel = y - rect.top - offsetY;
+
+      targetOffsetX -= offsetXRel * (zoomFactor - 1);
+      targetOffsetY -= offsetYRel * (zoomFactor - 1);
     }
-
-    let isTouching = false;
-    let touchStartX = null, touchStartY = null;
-    let lastTouchDistance = null, lastTouchCenter = null;
-
-    function getDistance(touches) {
-      const dx = touches[0].clientX - touches[1].clientX;
-      const dy = touches[0].clientY - touches[1].clientY;
-      return Math.sqrt(dx * dx + dy * dy);
-    }
-
-    function getCenter(touches) {
-      return {
-        x: (touches[0].clientX + touches[1].clientX) / 2,
-        y: (touches[0].clientY + touches[1].clientY) / 2
-      };
-    }
-
-    viewport.addEventListener("mousemove", (e) => {
-      if (!isTouching) {
-        cursorX = e.clientX;
-        cursorY = e.clientY;
-        updateTargetOffsetsFromCursor();
-      }
-    });
 
     viewport.addEventListener("wheel", (e) => {
       e.preventDefault();
-      const delta = e.deltaY > 0 ? -0.01 : 0.01;
-      targetScale = clamp(targetScale + delta, 1, 2.5);
-      updateTargetOffsetsFromCursor();
+      const zoomDelta = e.deltaY < 0 ? 0.02 : -0.02;
+      zoomAtPoint(e.clientX, e.clientY, zoomDelta);
     }, { passive: false });
 
+    let isDragging = false;
+    let dragStartX, dragStartY;
+
+    viewport.addEventListener("mousedown", (e) => {
+      isDragging = true;
+      dragStartX = e.clientX;
+      dragStartY = e.clientY;
+    });
+
+    viewport.addEventListener("mousemove", (e) => {
+      if (isDragging) {
+        const dx = e.clientX - dragStartX;
+        const dy = e.clientY - dragStartY;
+        targetOffsetX += dx;
+        targetOffsetY += dy;
+        dragStartX = e.clientX;
+        dragStartY = e.clientY;
+      }
+    });
+
+    viewport.addEventListener("mouseup", () => isDragging = false);
+    viewport.addEventListener("mouseleave", () => isDragging = false);
+
+    // Touch zoom
+    let lastTouchDist = null;
+
+    function getTouchDistance(e) {
+      const dx = e.touches[0].clientX - e.touches[1].clientX;
+      const dy = e.touches[0].clientY - e.touches[1].clientY;
+      return Math.sqrt(dx * dx + dy * dy);
+    }
+
     viewport.addEventListener("touchstart", (e) => {
-      isTouching = true;
-      if (e.touches.length === 1) {
-        touchStartX = e.touches[0].clientX;
-        touchStartY = e.touches[0].clientY;
-      } else if (e.touches.length === 2) {
-        lastTouchDistance = getDistance(e.touches);
-        lastTouchCenter = getCenter(e.touches);
-        touchStartX = null;
-        touchStartY = null;
+      if (e.touches.length === 2) {
+        lastTouchDist = getTouchDistance(e);
       }
     });
 
     viewport.addEventListener("touchmove", (e) => {
-      if (e.touches.length === 1 && touchStartX !== null && touchStartY !== null) {
-        const currentX = e.touches[0].clientX;
-        const currentY = e.touches[0].clientY;
-        const dx = currentX - touchStartX;
-        const dy = currentY - touchStartY;
-        targetOffsetX += dx;
-        targetOffsetY += dy;
-        touchStartX = currentX;
-        touchStartY = currentY;
-      } else if (e.touches.length === 2) {
-        const newDistance = getDistance(e.touches);
-        const center = getCenter(e.touches);
-        const distanceChange = newDistance - lastTouchDistance;
-        targetScale = clamp(targetScale + distanceChange * 0.0005, 1, 2.5);
-        cursorX = center.x;
-        cursorY = center.y;
-        updateTargetOffsetsFromCursor();
-        lastTouchDistance = newDistance;
-        lastTouchCenter = center;
-        touchStartX = null;
-        touchStartY = null;
+      if (e.touches.length === 2) {
+        const newDist = getTouchDistance(e);
+        const delta = (newDist - lastTouchDist) * 0.001;
+        const centerX = (e.touches[0].clientX + e.touches[1].clientX) / 2;
+        const centerY = (e.touches[0].clientY + e.touches[1].clientY) / 2;
+        zoomAtPoint(centerX, centerY, delta);
+        lastTouchDist = newDist;
+        e.preventDefault();
       }
     }, { passive: false });
 
-    viewport.addEventListener("touchend", (e) => {
-      if (e.touches.length === 0) {
-        isTouching = false;
-        touchStartX = null;
-        touchStartY = null;
-      } else if (e.touches.length === 1) {
-        touchStartX = e.touches[0].clientX;
-        touchStartY = e.touches[0].clientY;
-      }
-    });
-
-    updateTargetOffsetsFromCursor();
-    animateTransform();
+    animate();
   </script>
 </body>
 </html>
